package ru.itmo.ekaterinagalak.lab2.pokemons;

import ru.ifmo.se.pokemon.*;

import ru.itmo.ekaterinagalak.lab2.moves.physical.Facade;
import ru.itmo.ekaterinagalak.lab2.moves.status.TailWhip;
import ru.itmo.ekaterinagalak.lab2.moves.status.WorkUp;

public class Eevee extends Pokemon {
    private static final double BASE_STATS_HP = 55;
    private static final double BASE_STATS_ATTACK = 55;
    private static final double BASE_STATS_DEFENSE = 50;
    private static final double BASE_STATS_SPECIAL_ATTACK = 45;
    private static final double BASE_STATS_SPECIAL_DEFENSE = 65;
    private static final double BASE_STATS_SPEED = 55;

    public Eevee(String name, int level) {
        super(name, level);

        setStats(BASE_STATS_HP, BASE_STATS_ATTACK, BASE_STATS_DEFENSE, 
                 BASE_STATS_SPECIAL_ATTACK, BASE_STATS_SPECIAL_DEFENSE, BASE_STATS_SPEED);
        
        setType(Type.NORMAL);
        
        setMove(new TailWhip(), new Facade(), new WorkUp());
    }
}
